--- a/src/components/WordItem/WordItem.css
+++ b/src/components/WordItem/WordItem.css
@@ -1,8 +1,19 @@
 .word-item {
   padding: 10px;
-  border: 1px solid #000;
-  border-radius: 10px;
-  max-width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(206, 212, 218);
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 24px;
+  line-height: 1.4;
+  min-width: 200px;
+  text-align: center;
+}
+
+.word-item:hover {
+  transform: scale(1.1);
 }
 
 .word-item-title {
