feat: add voice recognition

--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,21 @@ ul {
   background-color: transparent;
   border: 1px solid #fff;
 }
+
+.secondary-button {
+  min-width: 150px;
+  background-color: #5bddc6;
+  color: #fff;
+  border: 1px solid #5bddc6;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  outline: none;
+  margin: 10px auto;
+}
+
+.primary-button:hover {
+  background-color: transparent;
+  border: 1px solid #5bddc6;
+  color: #5bddc6;
+}
