--- a/src/components/Recognition/Recognition.css
+++ b/src/components/Recognition/Recognition.css
@@ -5,3 +5,9 @@
   align-items: center;
   justify-content: center;
 }
+
+.listening {
+  border: 1px solid #ff0000;
+  color: #ff0000;
+  background-color: transparent;
+}
