--- a/src/pages/Statistics/Statistics.css
+++ b/src/pages/Statistics/Statistics.css
@@ -6,9 +6,7 @@
 }
 
 .statistics-item {
-  flex-wrap: wrap;
-  max-width: 405px;
-  width: 100%;
+  width: 50%;
   padding-bottom: 15px;
   margin: 10px;
   border: 1px solid rgb(206, 212, 218);
@@ -19,20 +17,16 @@
 }
 
 .statistics-title {
-  padding: 0 10px 0 10px;
+  padding: 5px 20px;
   font-weight: 400;
 }
 
 .statistics-title span {
   margin-left: 5px;
   font-weight: 300;
-  color:rgb(206, 212, 218);
+  color: #566165;
 }
 
 .email {
   color: #5bddc6;
-  padding: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
