--- a/src/components/Levels/Levels.css
+++ b/src/components/Levels/Levels.css
@@ -3,10 +3,6 @@
   justify-content: center;
 }
 
-.levels-container > .level-item {
-  margin: 10px;
-}
-
 .level-item {
   cursor: pointer;
   display: flex;
@@ -15,7 +11,7 @@
   font-size: 15px;
   width: 30px;
   height: 30px;
-  margin: 10px auto;
+  margin: 10px 10px;
   border: 1px solid #5bddc6;
   border-radius: 100%;
   background-color: #5bddc6;
